--- a/scipy/stats/tests/data/meson.build
+++ b/scipy/stats/tests/data/meson.build
@@ -4,3 +4,6 @@ py3.install_sources(['stable-cdf-sample-data.npy',
     pure : false,
     subdir : 'scipy/stats/tests/data'
 )
+
+subdir('nist_anova')
+subdir('nist_linregress')
