--- a/scipy/meson.build
+++ b/scipy/meson.build
@@ -10,6 +10,11 @@ incdir_f2py = incdir_numpy / '..' / '..' / 'f2py' / 'src'
 inc_f2py = include_directories(incdir_f2py)
 fortranobject_c = incdir_f2py / 'fortranobject.c'
 
+npymath_path = incdir_numpy / '..' / 'lib'
+npymath_lib = meson.get_compiler('c').find_library('npymath', dirs: npymath_path)
+npyrandom_path = incdir_numpy / '..' / '..' / 'random' / 'lib'
+npyrandom_lib = meson.get_compiler('c').find_library('npyrandom', dirs: npyrandom_path)
+
 # pybind11 include directory - needed in several submodules
 incdir_pybind11 = run_command(py3,
   ['-c', 'import pybind11; print(pybind11.get_include())'],
@@ -76,6 +81,7 @@ _linalg_pxd = custom_target('_linalg_pxd',
 # Note that subdirs with the most heavy builds should come first (that
 # parallelizes better)
 subdir('sparse')
+subdir('stats')
 subdir('fft')
 subdir('_lib')
 subdir('cluster')
