BLD: fix some issues in integrate/meson.build

--- a/scipy/integrate/meson.build
+++ b/scipy/integrate/meson.build
@@ -87,7 +87,7 @@ py3.extension_module('_quadpack',
     fortran_args: fortran_ignore_warnings,
     include_directories: [inc_np, '../_lib/src'],
     link_with: [quadpack_lib, mach_lib],
-    dependencies: [py3_dep],
+    dependencies: [py3_dep, lapack],
     install: true,
     subdir: 'scipy/integrate'
 )
@@ -97,7 +97,7 @@ py3.extension_module('_odepack',
     c_args: numpy_nodepr_api,
     fortran_args: fortran_ignore_warnings,
     link_with: [lsoda_lib, mach_lib],
-    dependencies: [py3_dep],
+    dependencies: [py3_dep, lapack],
     include_directories: [inc_np],
     install: true,
     subdir: 'scipy/integrate'
@@ -111,10 +111,10 @@ vode_module = custom_target('vode_module',
 
 py3.extension_module('vode',
     [vode_module, fortranobject_c],
-    link_with: [vode_lib, lsoda_lib],
+    link_with: [vode_lib],
     c_args: numpy_nodepr_api,
-    dependencies: [py3_dep],
     include_directories: [inc_np, inc_f2py],
+    dependencies: [py3_dep, lapack],
     install: true,
     subdir: 'scipy/integrate'
 )
@@ -129,7 +129,7 @@ py3.extension_module('lsoda',
     [lsoda_module, fortranobject_c],
     link_with: [lsoda_lib, mach_lib],
     c_args: numpy_nodepr_api,
-    dependencies: [py3_dep],
+    dependencies: [py3_dep, lapack],
     include_directories: [inc_np, inc_f2py],
     install: true,
     subdir: 'scipy/integrate'
