BLD: fix boost Cython compilation with Meson
This gets rid of `run_command`, and replaces it with use of
`custom_target`. This means things now run at build-time rather
than at configure-time, and cache will work correctly.

Closes https://github.com/rgommers/scipy/issues/25

--- a/scipy/stats/_boost/meson.build
+++ b/scipy/stats/_boost/meson.build
@@ -6,37 +6,56 @@ if meson.get_compiler('cpp', native: true).sizeof('void*') > 4
 endif
 
 include = include_directories('include')
-src = include_directories('src')
 inc_boost = include_directories('..' / '..' / '_lib' / 'boost')
 
-run_command(cython, '--cplus', 'src/hypergeom_ufunc.pyx')
+# hypergeom_ufunc
+_hypergeom_cy = custom_target('_hypergeom_cy',
+  output : 'hypergeom_ufunc.cpp',
+  input : _stats_gen_pyx[4],  # hypergeom_ufunc.pyx
+  command : [cython, '--cplus', '-3', '--fast-fail', '@INPUT@', '-o', '@OUTPUT@']
+)
 hypergeom_ufunc = py3.extension_module('hypergeom_ufunc',
-    ['src/hypergeom_ufunc.cpp'],
-    include_directories: [include, src, inc_np, inc_boost],
+    _hypergeom_cy,
+    include_directories: [include, inc_np, inc_boost],
     cpp_args: cpp_args,
     dependencies: [py3_dep]
 )
 
-run_command(cython, '--cplus', 'src/nbinom_ufunc.pyx')
+# nbinom_ufunc
+_nbinom_cy = custom_target('_nbinom_cy',
+  output : 'nbinom_ufunc.cpp',
+  input : _stats_gen_pyx[5],  # nbinom_ufunc.pyx
+  command : [cython, '--cplus', '-3', '--fast-fail', '@INPUT@', '-o', '@OUTPUT@']
+)
 nbinom_ufunc = py3.extension_module('nbinom_ufunc',
-    ['src/nbinom_ufunc.cpp'],
-    include_directories: [include, src, inc_np, inc_boost],
+    _nbinom_cy,
+    include_directories: [include, inc_np, inc_boost],
     cpp_args: cpp_args,
     dependencies: [py3_dep]
 )
 
-run_command(cython, '--cplus', 'src/beta_ufunc.pyx')
+# beta_ufunc
+_beta_cy = custom_target('_beta_cy',
+  output : 'beta_ufunc.cpp',
+  input : _stats_gen_pyx[1],  # beta_ufunc.pyx
+  command : [cython, '--cplus', '-3', '--fast-fail', '@INPUT@', '-o', '@OUTPUT@']
+)
 beta_ufunc = py3.extension_module('beta_ufunc',
-    ['src/beta_ufunc.cpp'],
-    include_directories: [include, src, inc_np, inc_boost],
+    _beta_cy,
+    include_directories: [include, inc_np, inc_boost],
     cpp_args: cpp_args,
     dependencies: [py3_dep]
 )
 
-run_command(cython, '--cplus', 'src/binom_ufunc.pyx')
+# binom_ufunc
+_binom_cy = custom_target('_binom_cy',
+  output : 'binom_ufunc.cpp',
+  input : _stats_gen_pyx[2],  # binom_ufunc.pyx
+  command : [cython, '--cplus', '-3', '--fast-fail', '@INPUT@', '-o', '@OUTPUT@']
+)
 binom_ufunc = py3.extension_module('binom_ufunc',
-    ['src/binom_ufunc.cpp'],
-    include_directories: [include, src, inc_np, inc_boost],
+    _binom_cy,
+    include_directories: [include, inc_np, inc_boost],
     cpp_args: cpp_args,
     dependencies: [py3_dep]
 )
