BLD: silence more unused-variable warnings in integrate

--- a/scipy/integrate/meson.build
+++ b/scipy/integrate/meson.build
@@ -112,7 +112,7 @@ vode_module = custom_target('vode_module',
 py3.extension_module('vode',
     [vode_module, fortranobject_c],
     link_with: [vode_lib],
-    c_args: numpy_nodepr_api,
+    c_args: [numpy_nodepr_api, '-Wno-unused-variable'],
     include_directories: [inc_np, inc_f2py],
     dependencies: [py3_dep, lapack],
     install: true,
@@ -128,7 +128,7 @@ lsoda_module = custom_target('lsoda_module',
 py3.extension_module('lsoda',
     [lsoda_module, fortranobject_c],
     link_with: [lsoda_lib, mach_lib],
-    c_args: numpy_nodepr_api,
+    c_args: [numpy_nodepr_api, '-Wno-unused-variable'],
     dependencies: [py3_dep, lapack],
     include_directories: [inc_np, inc_f2py],
     install: true,
@@ -144,7 +144,7 @@ _dop_module = custom_target('_dop_module',
 py3.extension_module('_dop',
     [_dop_module, fortranobject_c],
     link_with: [dop_lib],
-    c_args: numpy_nodepr_api,
+    c_args: [numpy_nodepr_api, '-Wno-unused-variable'],
     dependencies: [py3_dep],
     include_directories: [inc_np, inc_f2py],
     install: true,
