--- a/scipy/meson.build
+++ b/scipy/meson.build
@@ -93,6 +93,7 @@ subdir('stats')
 subdir('fft')
 subdir('_lib')
 subdir('special')
+subdir('spatial')
 subdir('cluster')
 subdir('constants')
 subdir('fftpack')
