--- a/scipy/spatial/meson.build
+++ b/scipy/spatial/meson.build
@@ -1,15 +1,3 @@
-qhull_headers = ['qhull_src/src/mem_r.h',
-'qhull_src/src/poly_r.h',
-'qhull_src/src/io_r.h',
-'qhull_src/src/qhull_ra.h',
-'qhull_src/src/merge_r.h',
-'qhull_src/src/user_r.h',
-'qhull_src/src/qset_r.h',
-'qhull_src/src/random_r.h',
-'qhull_src/src/libqhull_r.h',
-'qhull_src/src/geom_r.h',
-'qhull_src/src/stat_r.h']
-
 qhull_src = ['qhull_src/src/poly_r.c',
 'qhull_src/src/stat_r.c',
 'qhull_src/src/merge_r.c',
@@ -30,12 +18,33 @@ qhull_src = ['qhull_src/src/poly_r.c',
 
 # TODO: Add c_args: numpy_nodepr_api, once NumPy API usage is corrected.
 qhull = py3.extension_module('qhull',
-  qhull_headers + ['qhull.pyx', 'qhull_misc.h', 'qhull_misc.c'] + qhull_src,
-  include_directories: [incdir_numpy, '../_lib', '../_build_utils/src'],
+  ['qhull.pyx', 'qhull_misc.h', 'qhull_misc.c'] + qhull_src,
+  include_directories: [incdir_numpy, '../_lib', '../_build_utils/src', 'qhull_src/src'],
   dependencies: [py3_dep],
   install : true,
   subdir : 'scipy/spatial')
 
+ckdtree_src = ['ckdtree/src/query.cxx',
+  'ckdtree/src/build.cxx',
+  'ckdtree/src/query_pairs.cxx',
+  'ckdtree/src/count_neighbors.cxx',
+  'ckdtree/src/query_ball_point.cxx',
+  'ckdtree/src/query_ball_tree.cxx',
+  'ckdtree/src/sparse_distances.cxx']
+
+ckdtree_cpp = custom_target('ckdtree_cpp',
+  output : 'ckdtree.cpp',
+  input : 'ckdtree.pyx',
+  command : [cython, '--cplus', '-3', '--fast-fail', '@INPUT@', '-o', '@OUTPUT@']
+)
+
+# TODO: Add cpp_args: numpy_nodepr_api, once NumPy API usage is corrected.
+ckdtree = py3.extension_module('ckdtree',
+  ckdtree_src + [ckdtree_cpp],
+  include_directories: [incdir_numpy, '../_lib', '../_build_utils/src', 'ckdtree/src'],
+  dependencies: [py3_dep],
+  install : true,
+  subdir : 'scipy/spatial')
 
 # subdir('tests')
 # subdir('transform')
