--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -3,92 +3,40 @@ name: Linux Tests
 on:
   push:
     branches:
-      - master
-      - maintenance/**
+      - meson
   pull_request:
     branches:
-      - master
-      - maintenance/**
+      - meson
 
 jobs:
-  Python-37-dbg:
-    name: Python 3.7-dbg
-    if: "github.repository == 'scipy/scipy' && !contains(github.event.head_commit.message, '[ci skip]') && !contains(github.event.head_commit.message, '[skip ci]') && !contains(github.event.head_commit.message, '[skip github]')"
-    runs-on: ubuntu-18.04
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          submodules: recursive
-      - name: Configuring Test Environment
-        run: |
-          sudo apt-get update
-          sudo apt install python3.7-dbg python3.7-dev libatlas-base-dev liblapack-dev gfortran libgmp-dev libmpfr-dev libsuitesparse-dev ccache swig libmpc-dev
-          free -m
-          python3.7-dbg --version # just to check
-          export NPY_NUM_BUILD_JOBS=2
-          uname -a
-          df -h
-          ulimit -a
-          set -e -o pipefail
-          mkdir builds
-          cd builds
-      - name: Installing packages
-        run: |      
-          python3.7-dbg -c 'import sys; print("Python debug build:", hasattr(sys, "gettotalrefcount"))'
-          python3.7-dbg -m pip install --upgrade pip setuptools wheel
-          python3.7-dbg -m pip install --upgrade numpy cython pytest pytest-xdist pybind11
-          python3.7-dbg -m pip install --upgrade mpmath gmpy2 pythran
-          python3.7-dbg -m pip uninstall -y nose
-          cd ..
-      - name: Building SciPy
-        run: python3.7-dbg -u runtests.py -g -j2 --build-only
-      - name: Testing SciPy
-        if: ${{ github.event_name == 'pull_request' }}
-        run: |
-          python3.7-dbg -u runtests.py -g -j2 -m fast -- -rfEX --durations=10 2>&1 | tee runtests.log
-          python3.7-dbg tools/validate_runtests_log.py fast < runtests.log
-      - name: Dynamic symbol hiding check on Linux
-        if: ${{ github.event_name == 'pull_request' }}
-        run: ./tools/check_pyext_symbol_hiding.sh build
-
-  test_nightly:
-    name: Nightly CPython
-    if: "github.repository == 'scipy/scipy' && !contains(github.event.head_commit.message, '[ci skip]') && !contains(github.event.head_commit.message, '[skip ci]') && !contains(github.event.head_commit.message, '[skip github]') && !contains(github.ref, 'maintenance/') && !contains(github.base_ref, 'maintenance/')"
+  test_meson:
+    name: Meson build
+    if: "github.repository == 'rgommers/scipy' && !contains(github.event.head_commit.message, '[ci skip]') && !contains(github.event.head_commit.message, '[skip ci]') && !contains(github.event.head_commit.message, '[skip github]') && !contains(github.ref, 'maintenance/') && !contains(github.base_ref, 'maintenance/')"
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.10]
+        python-version: [3.9]
 
     steps:
     - uses: actions/checkout@v2
       with:
         submodules: recursive
 
-    - name: Install Python 3.10
-      if: matrix.python-version == '3.10'
-      run: |
-        sudo add-apt-repository ppa:deadsnakes/ppa
-        sudo apt-get update
-        sudo apt install -y --no-install-recommends python3.10-dev python3.10-distutils python3.10-venv
-        # GitHub doesn't provide a pip interface with py3.10 yet. Therefore, install it manually :
-        curl -O https://bootstrap.pypa.io/get-pip.py && python3.10 get-pip.py && rm get-pip.py
-        python3.10 -m pip install --upgrade pip setuptools
+    - name: Setup Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: ${{ matrix.python-version }}
 
-    - name: Install other build dependencies
+    - name: Install Ubuntu dependencies
       run: |
-        sudo apt-get install libatlas-base-dev liblapack-dev gfortran libgmp-dev libmpfr-dev libsuitesparse-dev ccache libmpc-dev
+        # NOTE: not the same OpenBLAS version as in upstream CI (being lazy here)
+        sudo apt-get install libopenblas-dev libatlas-base-dev liblapack-dev gfortran libgmp-dev libmpfr-dev libsuitesparse-dev ccache libmpc-dev
 
-    - name: Install packages
+    - name: Install Python packages
       run: |
-        pip install --user git+https://github.com/numpy/numpy.git
-        python3.10 -m pip install --user setuptools wheel cython pytest pybind11 pytest-xdist
-        pip install --user git+https://github.com/serge-sans-paille/pythran.git
-        python3.10 -m pip install -r mypy_requirements.txt
-
-    - name: Mypy
-      run: |
-        python3.10 -u runtests.py --mypy
+        python -m pip install numpy setuptools wheel cython pytest pytest-xdist pybind11 pytest-xdist mpmath gmpy2 pythran ninja
+        python -m pip install --user git+https://github.com/mesonbuild/meson.git
 
     - name: Test SciPy
       run: |
-        python3.10 -u runtests.py -m fast
+        ./mesondev.sh build $PWD/installdir
