--- a/scipy/sparse/linalg/meson.build
+++ b/scipy/sparse/linalg/meson.build
@@ -1,14 +1,14 @@
-# subdir('isolve')
-# subdir('dsolve')
-# subdir('eigen')
-# subdir('tests')
-
 py3.install_sources(['_expm_multiply.py',
   '__init__.py',
   'interface.py',
   '_norm.py',
   '_onenormest.py',
-  'matfuncs.py']
+  'matfuncs.py'],
   pure: false,
-  subdir: 'scipy/optimize'
+  subdir: 'scipy/sparse/linalg'
 )
+
+subdir('isolve')
+# subdir('dsolve')
+# subdir('eigen')
+# subdir('tests')
