--- a/scipy/sparse/meson.build
+++ b/scipy/sparse/meson.build
@@ -40,7 +40,6 @@ py3.install_sources(
 )
 
 subdir('sparsetools')
-# TODO: 
 subdir('csgraph')
-#subdir('linalg')
+subdir('linalg')
 subdir('tests')
