--- a/scipy/sparse/linalg/meson.build
+++ b/scipy/sparse/linalg/meson.build
@@ -9,6 +9,6 @@ py3.install_sources(['_expm_multiply.py',
 )
 
 subdir('isolve')
-# subdir('dsolve')
+subdir('dsolve')
 # subdir('eigen')
 # subdir('tests')
