--- a/scipy/sparse/linalg/eigen/tests/meson.build
+++ b/scipy/sparse/linalg/eigen/tests/meson.build
@@ -1,5 +1,5 @@
 py3.install_sources(['__init__.py',
-  'test_svds.py']
+  'test_svds.py'],
   pure: false,
   subdir: 'scipy/sparse/linalg/eigen/tests'
 )
