--- a/scipy/sparse/linalg/eigen/lobpcg/tests/meson.build
+++ b/scipy/sparse/linalg/eigen/lobpcg/tests/meson.build
@@ -1,4 +1,4 @@
-py3.install_sources['__init__.py',
+py3.install_sources(['__init__.py',
   'test_lobpcg.py'],
   pure: false,
   subdir: 'scipy/sparse/linalg/eigen/lobpcg/tests'
