--- a/scipy/sparse/linalg/isolve/meson.build
+++ b/scipy/sparse/linalg/isolve/meson.build
@@ -68,6 +68,7 @@ _iterative = py3.extension_module('_iterative',
   methods_f_3,
   methods_f_4,
   methods_f_5,
+  Util_f_0,
   _iterative_module,
   fortranobject_c,
   g77_abi_wrappers],
