optimize depends on givens_elimination

--- a/scipy/optimize/_trlib/meson.build
+++ b/scipy/optimize/_trlib/meson.build
@@ -3,7 +3,7 @@ _trlib = py3.extension_module('_trlib',
    'trlib_eigen_inverse.c', 'trlib_leftmost.c',
    'trlib_quadratic_zero.c', 'trlib_tri_factor.c'],
   c_args : numpy_nodepr_api,
-  dependencies : [py3_dep],
+  dependencies : [py3_dep, lapack],
   include_directories : [inc_np, '../../_lib', 
                          '../../_build_utils/src'],
   install : true,
