--- a/scipy/sparse/linalg/eigen/arpack/meson.build
+++ b/scipy/sparse/linalg/eigen/arpack/meson.build
@@ -1,83 +1,85 @@
-arpack_sources = ['ARPACK/SRC/zngets.f',
-'ARPACK/SRC/ssaitr.f',
-'ARPACK/SRC/cnapps.f',
-'ARPACK/SRC/znaup2.f',
-'ARPACK/SRC/cnaup2.f',
-'ARPACK/SRC/dsortc.f',
-'ARPACK/SRC/ssesrt.f',
-'ARPACK/SRC/dseupd.f',
-'ARPACK/SRC/sneupd.f',
-'ARPACK/SRC/sstatn.f',
-'ARPACK/SRC/sseupd.f',
-'ARPACK/SRC/sstqrb.f',
-'ARPACK/SRC/dsaup2.f',
-'ARPACK/SRC/cneupd.f',
-'ARPACK/SRC/znapps.f',
-'ARPACK/SRC/ssapps.f',
-'ARPACK/SRC/zstatn.f',
-'ARPACK/SRC/dngets.f',
-'ARPACK/SRC/cneigh.f',
-'ARPACK/SRC/dnaupd.f',
-'ARPACK/SRC/cstatn.f',
-'ARPACK/SRC/ssaupd.f',
-'ARPACK/SRC/cnaupd.f',
-'ARPACK/SRC/dseigt.f',
-'ARPACK/SRC/zgetv0.f',
-'ARPACK/SRC/ssaup2.f',
-'ARPACK/SRC/dsapps.f',
-'ARPACK/SRC/ssconv.f',
-'ARPACK/SRC/dsconv.f',
-'ARPACK/SRC/snaitr.f',
-'ARPACK/SRC/dneupd.f',
-'ARPACK/SRC/dnconv.f',
-'ARPACK/SRC/zneigh.f',
-'ARPACK/SRC/csortc.f',
-'ARPACK/SRC/sgetv0.f',
-'ARPACK/SRC/sstats.f',
-'ARPACK/SRC/zneupd.f',
-'ARPACK/SRC/sneigh.f',
-'ARPACK/SRC/dneigh.f',
-'ARPACK/SRC/dstatn.f',
-'ARPACK/SRC/dgetv0.f',
-'ARPACK/SRC/dnaup2.f',
-'ARPACK/SRC/dsgets.f',
-'ARPACK/SRC/dsaupd.f',
-'ARPACK/SRC/dstats.f',
-'ARPACK/SRC/sseigt.f',
-'ARPACK/SRC/snaupd.f',
-'ARPACK/SRC/znaupd.f',
-'ARPACK/SRC/snaup2.f',
-'ARPACK/SRC/zsortc.f',
-'ARPACK/SRC/cngets.f',
-'ARPACK/SRC/dsaitr.f',
-'ARPACK/SRC/dsesrt.f',
-'ARPACK/SRC/dsortr.f',
-'ARPACK/SRC/ssortc.f',
-'ARPACK/SRC/sngets.f',
-'ARPACK/SRC/dnaitr.f',
-'ARPACK/SRC/cgetv0.f',
-'ARPACK/SRC/ssgets.f',
-'ARPACK/SRC/dnapps.f',
-'ARPACK/SRC/ssortr.f',
-'ARPACK/SRC/snconv.f',
-'ARPACK/SRC/cnaitr.f',
-'ARPACK/SRC/znaitr.f',
-'ARPACK/SRC/dstqrb.f',
-'ARPACK/SRC/snapps.f',
-'ARPACK/UTIL/second_NONE.f',
-'ARPACK/UTIL/cvout.f',
-'ARPACK/UTIL/ivout.f',
-'ARPACK/UTIL/dmout.f',
-'ARPACK/UTIL/icnteq.f',
-'ARPACK/UTIL/dvout.f',
-'ARPACK/UTIL/zvout.f',
-'ARPACK/UTIL/svout.f',
-'ARPACK/UTIL/iset.f',
-'ARPACK/UTIL/smout.f',
-'ARPACK/UTIL/iswap.f',
-'ARPACK/UTIL/zmout.f',
-'ARPACK/UTIL/icopy.f',
-'ARPACK/UTIL/cmout.f']
+arpack_sources = [
+  'ARPACK/SRC/zngets.f',
+  'ARPACK/SRC/ssaitr.f',
+  'ARPACK/SRC/cnapps.f',
+  'ARPACK/SRC/znaup2.f',
+  'ARPACK/SRC/cnaup2.f',
+  'ARPACK/SRC/dsortc.f',
+  'ARPACK/SRC/ssesrt.f',
+  'ARPACK/SRC/dseupd.f',
+  'ARPACK/SRC/sneupd.f',
+  'ARPACK/SRC/sstatn.f',
+  'ARPACK/SRC/sseupd.f',
+  'ARPACK/SRC/sstqrb.f',
+  'ARPACK/SRC/dsaup2.f',
+  'ARPACK/SRC/cneupd.f',
+  'ARPACK/SRC/znapps.f',
+  'ARPACK/SRC/ssapps.f',
+  'ARPACK/SRC/zstatn.f',
+  'ARPACK/SRC/dngets.f',
+  'ARPACK/SRC/cneigh.f',
+  'ARPACK/SRC/dnaupd.f',
+  'ARPACK/SRC/cstatn.f',
+  'ARPACK/SRC/ssaupd.f',
+  'ARPACK/SRC/cnaupd.f',
+  'ARPACK/SRC/dseigt.f',
+  'ARPACK/SRC/zgetv0.f',
+  'ARPACK/SRC/ssaup2.f',
+  'ARPACK/SRC/dsapps.f',
+  'ARPACK/SRC/ssconv.f',
+  'ARPACK/SRC/dsconv.f',
+  'ARPACK/SRC/snaitr.f',
+  'ARPACK/SRC/dneupd.f',
+  'ARPACK/SRC/dnconv.f',
+  'ARPACK/SRC/zneigh.f',
+  'ARPACK/SRC/csortc.f',
+  'ARPACK/SRC/sgetv0.f',
+  'ARPACK/SRC/sstats.f',
+  'ARPACK/SRC/zneupd.f',
+  'ARPACK/SRC/sneigh.f',
+  'ARPACK/SRC/dneigh.f',
+  'ARPACK/SRC/dstatn.f',
+  'ARPACK/SRC/dgetv0.f',
+  'ARPACK/SRC/dnaup2.f',
+  'ARPACK/SRC/dsgets.f',
+  'ARPACK/SRC/dsaupd.f',
+  'ARPACK/SRC/dstats.f',
+  'ARPACK/SRC/sseigt.f',
+  'ARPACK/SRC/snaupd.f',
+  'ARPACK/SRC/znaupd.f',
+  'ARPACK/SRC/snaup2.f',
+  'ARPACK/SRC/zsortc.f',
+  'ARPACK/SRC/cngets.f',
+  'ARPACK/SRC/dsaitr.f',
+  'ARPACK/SRC/dsesrt.f',
+  'ARPACK/SRC/dsortr.f',
+  'ARPACK/SRC/ssortc.f',
+  'ARPACK/SRC/sngets.f',
+  'ARPACK/SRC/dnaitr.f',
+  'ARPACK/SRC/cgetv0.f',
+  'ARPACK/SRC/ssgets.f',
+  'ARPACK/SRC/dnapps.f',
+  'ARPACK/SRC/ssortr.f',
+  'ARPACK/SRC/snconv.f',
+  'ARPACK/SRC/cnaitr.f',
+  'ARPACK/SRC/znaitr.f',
+  'ARPACK/SRC/dstqrb.f',
+  'ARPACK/SRC/snapps.f',
+  'ARPACK/UTIL/second_NONE.f',
+  'ARPACK/UTIL/cvout.f',
+  'ARPACK/UTIL/ivout.f',
+  'ARPACK/UTIL/dmout.f',
+  'ARPACK/UTIL/icnteq.f',
+  'ARPACK/UTIL/dvout.f',
+  'ARPACK/UTIL/zvout.f',
+  'ARPACK/UTIL/svout.f',
+  'ARPACK/UTIL/iset.f',
+  'ARPACK/UTIL/smout.f',
+  'ARPACK/UTIL/iswap.f',
+  'ARPACK/UTIL/zmout.f',
+  'ARPACK/UTIL/icopy.f',
+  'ARPACK/UTIL/cmout.f'
+]
 
 arpack_lib = static_library('arpack_lib',
   arpack_sources,
