--- a/environment.yml
+++ b/environment.yml
@@ -10,6 +10,7 @@ dependencies:
   - python
   - cython
   - compilers
+  - ninja
   - numpy
   - openblas
   - libblas=*=*openblas  # helps avoid pulling in MKL
