--- a/scipy/meson.build
+++ b/scipy/meson.build
@@ -112,6 +112,7 @@ subdir('cluster')
 subdir('constants')
 subdir('fftpack')
 subdir('integrate')
+subdir('interpolate')
 subdir('linalg')
 subdir('ndimage')
 subdir('odr')
